fixed display of menu toggler on mobile (issue #68)

--- a/static/themes/dark/css/theme.css
+++ b/static/themes/dark/css/theme.css
@@ -35,6 +35,11 @@ body {
     border-bottom: 1px solid #242a38;
 }
 
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(243,136,46, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+
 
 .n-logo-theme {
     color: #ffffff;
