--- a/static/themes/light/css/theme.css
+++ b/static/themes/light/css/theme.css
@@ -34,6 +34,12 @@ body {
     padding: 1.5% 4%;
 }
 
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(74,144,226, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+
 .n-logo-theme {
     color: #0f1121;
     padding-left: 12px;
@@ -42,6 +48,7 @@ body {
 .nav-link {
     color: #0f1121;
 }
+
 
 .nav-link:hover {
     color: #ffffff;
